version that works nicely except in IE6 where the layout breaks badly. Need more time to fix that

--- a/css/longdesc.css
+++ b/css/longdesc.css
@@ -17,10 +17,9 @@
 }
 .accessible-longdesc button .text{
     display: block;
-    float:left;
+    float:right;
     overflow: hidden;
     width: 0px;
-    /*visibility:hidden;*/
     zoom:1;
 }
 .accessible-longdesc button.hover .text{
@@ -28,7 +27,7 @@
 }
 .accessible-longdesc button .icon{
     display: block;
-    float:left;
+    float:right;
     width: 16px;
     height:16px;
     zoom:1;
@@ -43,4 +42,9 @@
     background-image:url(spinner.gif);
     background-repeat:no-repeat;
     background-position:center;
+}
+.accessible-longdesc .desc-content{
+    width:100%;
+    height:100%;
+    overflow:auto;
 }
